--- a/MainStartup.kv
+++ b/MainStartup.kv
@@ -39,7 +39,7 @@
     Slider:
         id: slr
         min: 0
-        max: 2000
+        max: 1000
         size_hint: 0.4, 0.2
         step: 1
         x: root.width * 0.35
@@ -53,3 +53,49 @@
         text: 'Current Position:'
         x: root.width * -0.4
         y: root.height * 0.1
+    DPEAButton:
+        size: 100, 100
+        color: 0, 0, 1, 1
+        font_size: 60
+        text: 'Next Page'
+        x: root.width * -0.4
+        y: root.height * 0.3
+        on_press: root.page()
+
+<GamerScreen>:
+    name: 'gamerScreen'
+    FloatLayout:
+        size_hint: None, None
+
+    DPEAButton:
+        size: 50, 50
+        color: 0, 0, 1, 1
+        font_size: 60
+        text: 'Exit'
+        x: root.width * 0.5
+        y: root.height * 0.2
+        on_press: root.exit_program()
+    DPEAButton:
+        size: 50, 50
+        color: 0, 0, 1, 1
+        font_size: 60
+        text: 'Move'
+        x: root.width * 0.2
+        y: root.height * 0.2
+        on_press: root.run1()
+    DPEAButton:
+        size: 100, 100
+        color: 0, 0, 1, 1
+        font_size: 60
+        text: 'Move thread'
+        x: root.width * 0.2
+        y: root.height * 0.5
+        on_press: root.startthread()
+    DPEAButton:
+        size: 100, 100
+        color: 0, 0, 1, 1
+        font_size: 60
+        text: 'Move Talon'
+        x: root.width * 0.5
+        y: root.height * 0.5
+        on_press: root.run3()
