--- a/MainStartup.kv
+++ b/MainStartup.kv
@@ -79,7 +79,7 @@
         size: 50, 50
         color: 0, 0, 1, 1
         font_size: 60
-        text: 'Move'
+        text: 'Speed up'
         x: root.width * 0.2
         y: root.height * 0.2
         on_press: root.run1()
